--- a/final_project.html
+++ b/final_project.html
@@ -378,24 +378,49 @@ summary {
 
 <div id="what-is-it" class="section level2">
 <h2>What is it?</h2>
-<p>The final project is an essay in which you expolore in greater depth a topic that we have touched on during the course. You can either choose a question from one of the ones below, or you can decide on your own topic and come up with a research question.</p>
+<p>The final project is an essay in which you explore in greater depth a topic that we have touched on during the course. You can either choose a question from one of the ones below, or you can decide on your own topic and come up with a research question. Please let me know what research question you have chosen before starting work</p>
 <hr />
 </div>
 <div id="when-is-it-due" class="section level2">
 <h2>When is it due?</h2>
 <p>28th February 2022 at 23:59 on Blackboard. If anyone is planning on taking the Abschlussprüfung next semester and needs to have their marks for this course ready before this time, you will need to hand in earlier. Let me know if you are planning on doing this.</p>
 <hr />
+<div class="yellowbox">
+<h2 id="how-long-should-it-be">How long should it be?</h2>
 </div>
-<div id="how-long-should-it-be" class="section level2">
-<h2>How long should it be?</h2>
 <p>Between 1500 - 2000 words.</p>
 <hr />
 </div>
-<div id="questions" class="section level2">
-<h2>Questions</h2>
+<div id="example-questions" class="section level2">
+<h2>Example Questions</h2>
+<div class="pinkbox">
 <ol style="list-style-type: decimal">
-<li>To what extent</li>
+<li>To what extent does the below quote from Bertrand-Bocandé exemplify British linguistic imperialism during the colonial period?</li>
 </ol>
+<blockquote>
+<p>“It is clear that people used to expressing themselves with a rather simple language cannot easily elevate their intelligence to the genius of a European language. When they were in contact with the Portuguese and forced to communicate with them, speaking the same language, it was necessary that the varied expressions acquired during so many centuries of civilisation dropped their perfection, to adapt to ideas being born and to barbarous forms of language of half-savage peoples.”</p>
+</blockquote>
+</div>
+<p><br></p>
+<div class="yellowbox">
+<ol start="2" style="list-style-type: decimal">
+<li>Compare and contrast Kachru’s three circles model <span class="citation">Kachru (1985)</span> and Schneider’s dynamic model <span class="citation">Schneider (2007)</span>. Which do</li>
+</ol>
+</div>
+<ol start="3" style="list-style-type: decimal">
+<li>What problems arise with the 3 way distinction of English speakers: ENL, ESL and EFL?</li>
+</ol>
+</div>
+<div id="references" class="section level2 unnumbered">
+<h2>References</h2>
+<div id="refs" class="references">
+<div id="ref-kachru1985standards">
+<p>Kachru, Braj B. 1985. <em>Standards, Codification and Sociolinguistic Realism: The English Language in the Outer Circle</em>. Edited by R. Quirk and H. Widdowson. Cambridge University Press.</p>
+</div>
+<div id="ref-schneider2007postcolonial">
+<p>Schneider, Edgar W. 2007. <em>Postcolonial English: Varieties Around the World</em>. Cambridge University Press.</p>
+</div>
+</div>
 </div>
 
 
