--- a/final_project.html
+++ b/final_project.html
@@ -438,14 +438,37 @@ summary {
 </blockquote>
 <p><strong>What role has the English linguistic imperialism played in language death across the globe?</strong></p>
 <hr />
-<p><strong>7. Consider the following quote from Widdowson 1994:</strong></p>
+<p><strong>7. Consider the following quote from Widdowson (1994: 385):</strong></p>
 <blockquote>
-<p>“How English develops in the world is no business whatever of native speakers in England, the United States, or anywhere else. They have no say in the matter, no right to intervene or pass judgement. They are irrelevant. The very fact that English is an international language means that no nation can have custody over it. To grant such custody of the language, is necessarily to arrest its development and so under- mine its international status […] it is only international to the extent that it is not their language. It is not a possession which they lease out to others, while still retaining the freehold. Other people actually own it”</p>
+<p>“How English develops in the world is no business whatever of native speakers in England, the United States, or anywhere else. They have no say in the matter, no right to intervene or pass judgement. They are irrelevant. The very fact that English is an international language means that no nation can have custody over it. To grant such custody of the language, is necessarily to arrest its development and so under- mine its international status […]. It is not a possession which they lease out to others, while still retaining the freehold. Other people actually own it”</p>
 </blockquote>
 <p><strong>To what extent do you agree/ disagree with this view?</strong></p>
+<p><br></p>
 </div>
 <div id="group-presentations" class="section level1">
 <h1>Group Presentations</h1>
+<p><br></p>
+<div id="how-long-should-it-be-1" class="section level2 pinkbox">
+<h2>How long should it be?</h2>
+</div>
+<p>15 mins plus 5 mins at the end for questions. If you are a group of 2, it can be a bit shorter.</p>
+<hr />
+<div id="what-is-the-format" class="section level2 tealbox2">
+<h2>What is the format?</h2>
+</div>
+<p>You can decide how you would best prefer to present, you can either create some slides or if you prefer, a handout. I would definitely advise having some sort of visual though.</p>
+<hr />
+<div id="what-should-be-included" class="section level2 darkbluebox">
+<h2>What should be included?</h2>
+</div>
+<p>Think of the presentation as a mini lesson, you might want to split the focus up between you, so one person covers phonetics/ phonology, another covers syntax, another covers lexis etc. What you cover is up to you and depends on what you find interesting during your research phase. It would also be good to give a short background to the variety, but don’t spend too much time on this as these are very short presentations.</p>
+<hr />
+<div id="how-is-it-marked" class="section level2 yellowbox">
+<h2>How is it marked?</h2>
+</div>
+<p>You will be marked on the content and delivery (including slides or handout). I will also ask each of you to submit a grade for your co-presenters</p>
+<hr />
+<p><br></p>
 <div id="references" class="section level2 orangebox">
 <h2>References</h2>
 </div>
@@ -470,6 +493,9 @@ summary {
 </div>
 <div id="ref-schneider2007postcolonial">
 <p>Schneider, Edgar W. 2007. <em>Postcolonial English: Varieties Around the World</em>. Cambridge University Press.</p>
+</div>
+<div id="ref-widdowson1994ownership">
+<p>Widdowson, Henry G. 1994. “The Ownership of English.” <em>TESOL Quarterly</em> 28 (2): 377–89.</p>
 </div>
 </div>
 </div>
